--- a/libs/includes/before_body.html
+++ b/libs/includes/before_body.html
@@ -11,8 +11,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/">Travel Log</a></li>
-        <li><a href="/mobile.html">Mobile</a></li>
+        <li><a href="travelLog/index.html">Travel Log</a></li>
+        <li><a href="travelLog/mobile.html">Mobile</a></li>
         <!-- <li class="dropdown"> -->
           <!-- <a href="developer" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Verbs<span class="caret"></span></a> -->
           <!-- <ul class="dropdown-menu" role="menu"> -->
